# fintra

./: .env  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  debug-entrypoint.sh  docker-compose.yaml  entrypoint.sh  lint.sh  migration.sql  pyproject.toml  pytest.ini  requirements.txt  test.py  test.sh  yoyo.ini
alembic/versions/: 2e948ab7bd04_create_transactions_table.py  5f1c665048c7_create_users_table.py
fintra/: __main__.py  app.py  compose.yaml  config.py  db.py
grafana/provisioning/dashboards/: dashboards.yaml  fintra-dashboard.json
migrations/: 20250712_01_Siyn7-create-transactions-table.py  20250730_01_oxheC-create-users-table.py  20250802_01_NML4q-add-user-id-to-transactions.py  20250820_01_p5ccr-add-salt-to-users-table.py
prometheus/: prometheus.yaml
requirements/: main.txt  test.txt
static/js/: dashboard.js
templates/: base.html  dashboard.html  index.html  join.html  login.html
tests/: compose.yaml  compose.yml  conftest.py  run_migration.sh  test_app.py  test_db.py  yoyo.ini
